--- a/index.ipynb
+++ b/index.ipynb
@@ -155,7 +155,7 @@
    "outputs": [],
    "source": [
     "def rss_values(x_values, y_values, m, b_values):\n",
-    "    return y_values-(b_values)"
+    "    return squared_errors()"
    ]
   },
   {
