--- a/index.ipynb
+++ b/index.ipynb
@@ -155,7 +155,7 @@
    "outputs": [],
    "source": [
     "def rss_values(x_values, y_values, m, b_values):\n",
-    "    return squared_errors()"
+    "    return squared_errors(x_values,y_values,n)"
    ]
   },
   {
