--- a/index.ipynb
+++ b/index.ipynb
@@ -201,7 +201,7 @@
    "source": [
     "import sys\n",
     "b_val = list(range(0, 15, 1))\n",
-    "bval_RSS = [rss_values(x,y,43,b) for b in b_val]\n",
+    "bval_RSS = rss_values(x,y,43,b_) \n",
     "np.savetxt(sys.stdout, bval_RSS, '%16.2f')  #this line is to round your result, which will make things look nicer."
    ]
   },
