--- a/index.ipynb
+++ b/index.ipynb
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -180,28 +180,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           46.24            43.31            72.61            89.61            43.64            64.36           131.67             8.74             1.30           118.72            81.37           100.88            51.15           143.45            22.10            35.65            35.90             7.18            62.89            47.37           164.06            37.10             9.33            31.96             2.08           131.00            76.46             4.21            45.60            41.01\n",
-      "           33.64            31.15            56.57            71.68            31.43            49.32           109.72             3.83             0.02            97.93            64.33            81.79            37.85           120.49            13.70            24.71            24.92             2.82            48.03            34.60           139.45            25.92             4.22            21.65             5.96           109.11            59.97             1.11            33.10            29.20\n",
-      "           23.04            20.99            42.53            55.75            21.22            36.27            89.77             0.92             0.74            79.13            49.29            64.70            26.54            99.54             7.30            15.77            15.94             0.46            35.17            23.84           116.83            16.73             1.11            13.35            11.84            89.22            45.48             0.00            22.59            19.40\n",
-      "           14.44            12.82            30.48            41.82            13.00            25.23            71.82             0.00             3.46            62.34            36.25            49.62            17.24            80.58             2.90             8.83             8.95             0.10            24.31            15.07            96.21             9.55             0.00             7.04            19.73            71.33            33.00             0.90            14.09            11.59\n",
-      "            7.84             6.66            20.44            29.88             6.79            16.18            55.87             1.09             8.18            47.55            25.21            36.53             9.93            63.63             0.49             3.89             3.97             1.74            15.45             8.31            77.59             4.37             0.90             2.73            29.61            55.44            22.51             3.79             7.58             5.78\n",
-      "            3.24             2.50            12.40            19.95             2.58             9.14            41.92             4.17            14.90            34.76            16.16            25.44             4.63            48.68             0.09             0.94             0.98             5.38             8.59             3.54            60.98             1.19             3.79             0.43            41.49            41.55            14.02             8.69             3.07             1.97\n",
-      "            0.64             0.34             6.36            12.02             0.37             4.09            29.97             9.26            23.61            23.97             9.12            16.35             1.33            35.72             1.69             0.00             0.00            11.02             3.73             0.78            46.36             0.01             8.68             0.12            55.37            29.66             7.53            15.59             0.57             0.16\n",
-      "            0.04             0.18             2.31             6.08             0.16             1.05            20.02            16.35            34.33            15.18             4.08             9.27             0.02            24.77             5.28             1.06             1.02            18.66             0.87             0.01            33.74             0.83            15.57             1.81            71.26            19.76             3.04            24.48             0.06             0.36\n",
-      "            1.44             2.01             0.27             2.15             1.94             0.00            12.07            25.43            47.05             8.39             1.04             4.18             0.72            15.82            10.88             4.12             4.03            28.30             0.00             1.25            23.12             3.65            24.47             5.51            89.14            11.87             0.55            35.38             1.55             2.55\n",
-      "            4.84             5.85             0.23             0.22             5.73             0.96             6.12            36.52            61.77             3.59             0.00             1.09             3.42             8.86            18.48             9.17             9.05            39.94             1.14             4.48            14.51             8.46            35.36            11.20           109.02             5.98             0.07            48.27             5.05             6.74\n",
-      "           10.24            11.69             2.19             0.28            11.52             3.91             2.17            49.60            78.49             0.80             0.96             0.00             8.11             3.91            28.07            16.23            16.06            53.58             4.28             9.72             7.89            15.28            48.25            18.90           130.90             2.09             1.58            63.17            10.54            12.93\n",
-      "           17.64            19.53             6.14             2.35            19.31             8.86             0.23            64.69            97.21             0.01             3.92             0.91            14.81             0.95            39.67            25.29            25.08            69.22             9.42            16.95             3.27            24.10            63.14            28.59           154.79             0.20             5.09            80.06            18.04            21.12\n",
-      "           27.04            29.36            12.10             6.42            29.09            15.82             0.28            81.78           117.93             1.22             8.88             3.83            23.50             0.00            53.27            36.35            36.10            86.86            16.56            26.19             0.65            34.92            80.03            40.28           180.67             0.31            10.60            98.96            27.53            31.31\n",
-      "           38.44            41.20            20.06            12.49            40.88            24.77             2.33           100.86           140.65             4.43            15.84             8.74            34.20             1.05            68.86            49.40            49.11           106.50            25.70            37.42             0.04            47.74            98.93            53.98           208.55             2.42            18.11           119.86            39.02            43.51\n",
-      "           51.84            55.04            30.02            20.55            54.67            35.73             6.38           121.95           165.37             9.64            24.80            15.65            46.90             4.09            86.46            64.46            64.13           128.14            36.84            50.66             1.42            62.56           119.82            69.67           238.43             6.52            27.62           142.75            52.52            57.70\n"
+      "            0.00          1750.97\n",
+      "            0.50          1552.09\n",
+      "            1.00          1368.21\n",
+      "            1.50          1199.33\n",
+      "            2.00          1045.45\n",
+      "            2.50           906.57\n",
+      "            3.00           782.69\n",
+      "            3.50           673.81\n",
+      "            4.00           579.93\n",
+      "            4.50           501.05\n",
+      "            5.00           437.17\n",
+      "            5.50           388.29\n",
+      "            6.00           354.41\n",
+      "            6.50           335.53\n",
+      "            7.00           331.65\n",
+      "            7.50           342.77\n",
+      "            8.00           368.89\n",
+      "            8.50           410.01\n",
+      "            9.00           466.13\n",
+      "            9.50           537.25\n",
+      "           10.00           623.37\n",
+      "           10.50           724.49\n",
+      "           11.00           840.61\n",
+      "           11.50           971.73\n",
+      "           12.00          1117.85\n",
+      "           12.50          1278.97\n",
+      "           13.00          1455.08\n",
+      "           13.50          1646.20\n",
+      "           14.00          1852.32\n"
      ]
     }
    ],
    "source": [
     "import sys\n",
     "b_val = list(range(0, 15, 1))\n",
-    "bval_RSS = rss_values(x,y,43,b_) \n",
+    "bval_RSS = rss_values(x,y,43,b_val) \n",
     "np.savetxt(sys.stdout, bval_RSS, '%16.2f')  #this line is to round your result, which will make things look nicer."
    ]
   },
