--- a/index.ipynb
+++ b/index.ipynb
@@ -287,7 +287,7 @@
    "outputs": [],
    "source": [
     "# Use slope_at\n",
-    "\n",
+    "slope_at(x,y,3,)\n",
     "#{'b': 3, 'slope': -232.73066022784406}"
    ]
   },
