Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -287,7 +287,7 @@
    "outputs": [],
    "source": [
     "# Use slope_at\n",
-    "slope_at(x,y,43,list(range()))\n",
+    "slope_at(x,y,43,list(range(3:)))\n",
     "#{'b': 3, 'slope': -232.73066022784406}"
    ]
   },
