Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -301,7 +301,7 @@
    ],
    "source": [
     "# Use slope_at\n",
-    "slope_at(x,y,43,list(range(3,7)))\n",
+    "slope_at(x,y,43,)\n",
     "#{'b': 3, 'slope': -232.73066022784406}"
    ]
   },
