--- a/index.ipynb
+++ b/index.ipynb
@@ -396,14 +396,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def updated_b(b, learning_rate, cost_curve_slope):\n",
-    "    return b - learning_rate*co"
+    "    return b - learning_rate*cost_curve_slope"
    ]
   },
   {
@@ -415,11 +413,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.3273066022784406"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "current_slope = slope_at(x, y, 43, 3)['slope']\n",
     "updated_b(3, .01, current_slope)\n",
@@ -428,11 +435,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.2581066022854674"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "current_slope = slope_at(x, y, 43, 5.327)['slope']\n",
     "updated_b(5.327, .01, current_slope)\n",
@@ -441,11 +457,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.630506602279827"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "current_slope = slope_at(x, y, 43, 6.258)['slope']\n",
     "updated_b(6.258, .01, current_slope)\n",
@@ -454,11 +479,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.779706602280413"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "current_slope = slope_at(x, y, 43, 6.631)['slope']\n",
     "updated_b(6.631, .01, current_slope)\n",
