--- a/index.ipynb
+++ b/index.ipynb
@@ -517,7 +517,7 @@
    "outputs": [],
    "source": [
     "def gradient_descent(x_values, y_values, steps, current_b, learning_rate, m):\n",
-    "    cost = y_values"
+    "    cost = (y_values - "
    ]
   },
   {
