--- a/index.ipynb
+++ b/index.ipynb
@@ -517,7 +517,8 @@
    "outputs": [],
    "source": [
     "def gradient_descent(x_values, y_values, steps, current_b, learning_rate, m):\n",
-    "    cost = slope_at(x,y,m)"
+    "    cost = slope_at(x,y,m,current_b)\n",
+    "    return "
    ]
   },
   {
