--- a/index.ipynb
+++ b/index.ipynb
@@ -517,7 +517,9 @@
    "outputs": [],
    "source": [
     "def gradient_descent(x_values, y_values, steps, current_b, learning_rate, m):\n",
-    "    cost_cur\n",
+    "    cost_curve = []\n",
+    "    for i in range(steps):\n",
+    "        curr\n",
     "\n",
     "\n",
     "\n",
