--- a/index.ipynb
+++ b/index.ipynb
@@ -519,7 +519,7 @@
     "def gradient_descent(x_values, y_values, steps, current_b, learning_rate, m):\n",
     "    cost_curve = []\n",
     "    for i in range(steps):\n",
-    "        curr\n",
+    "        current_cost_slope = slope_at\n",
     "\n",
     "\n",
     "\n",
