--- a/index.ipynb
+++ b/index.ipynb
@@ -519,7 +519,8 @@
     "def gradient_descent(x_values, y_values, steps, current_b, learning_rate, m):\n",
     "    cost_curve = []\n",
     "    for i in range(steps):\n",
-    "        current_cost_slope = slope_at(x_values,y_values,m,c)\n",
+    "        current_cost_slope = slope_at(x_values,y_values,m,current_b)['slope']\n",
+    "        cur\n",
     "\n",
     "\n",
     "\n",
