Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -520,7 +520,7 @@
     "    cost_curve = []\n",
     "    for i in range(steps):\n",
     "        current_cost_slope = slope_at(x_values,y_values,m,current_b)['slope']\n",
-    "        cur\n",
+    "        current_rss = residual_sum_squares(x_values)\n",
     "\n",
     "\n",
     "\n",
