--- a/index.ipynb
+++ b/index.ipynb
@@ -521,7 +521,8 @@
     "    for i in range(steps):\n",
     "        current_cost_slope = slope_at(x_values,y_values,m,current_b)['slope']\n",
     "        current_rss = residual_sum_squares(x_values,y_values,m,current_b)\n",
-    "        cost_curve.append()\n",
+    "        cost_curve.append({'b': current_b, 'rss': round(current_rss,2), 'slope': round(current_cost_slope,2)})\n",
+    "        cur\n",
     "\n",
     "\n",
     "\n",
